--- a/Neo4j-Kafka-Demo.ipynb
+++ b/Neo4j-Kafka-Demo.ipynb
@@ -172,7 +172,7 @@
     "# connect to Kafka\n",
     "bootstrap_servers = 'localhost:9092' # change if your brokers live else where\n",
     "\n",
-    "kafka_topic = 'neo4j-1M-demo3'\n",
+    "kafka_topic = 'neo4j-1M-demo'\n",
     "\n",
     "msg_count = 1000000\n",
     "\n",
@@ -180,7 +180,7 @@
     "\n",
     "# function to generate messages that will be the data for the graph update\n",
     "\n",
-    "# an example message is displayed : accountId, revenue, timestamp\n",
+    "# an example message is displayed : userId, amount, timestamp\n",
     "# this simulates data from the source database\n",
     "\n",
     "i=0\n",
@@ -518,7 +518,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Assignment: [TopicPartition{topic=neo4j-1M-demo3,partition=0,offset=-1001,error=None}]\n",
+      "Assignment: [TopicPartition{topic=neo4j-1M-demo,partition=0,offset=-1001,error=None}]\n",
       "Messages consumed: 50000 Batch size: 50000 Nodes created: 50000 Rels created: 50000\n",
       "Messages consumed: 100000 Batch size: 50000 Nodes created: 50000 Rels created: 50000\n",
       "Messages consumed: 150000 Batch size: 50000 Nodes created: 50000 Rels created: 50000\n",
